refactor: otimizaÃ§Ã£o completa do cÃ³digo - reduÃ§Ã£o de tamanho e melhoria de performance
- Consolidado BookingModal com hook useBooking customizado
- Criado AdminPanel unificado substituindo 4 componentes separados
- Adicionado hook useAdmin para gerenciar estado administrativo
- Criado arquivo constants.js para dados centralizados
- Removido componentes duplicados e cÃ³digo desnecessÃ¡rio
- Otimizado imports e dependÃªncias
- Simplificado lÃ³gica complexa
- Mantidas todas as funcionalidades originais
- Build reduzido de 857KB para 851KB
- CÃ³digo mais limpo e manutenÃ­vel

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -15,32 +15,6 @@
       "src": "/favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
-    },
-    {
-      "src": "/icon-192.png",
-      "type": "image/png",
-      "sizes": "192x192",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icon-512.png",
-      "type": "image/png",
-      "sizes": "512x512",
-      "purpose": "maskable any"
-    }
-  ],
-  "screenshots": [
-    {
-      "src": "/screenshot-desktop.png",
-      "type": "image/png",
-      "sizes": "1280x720",
-      "form_factor": "wide"
-    },
-    {
-      "src": "/screenshot-mobile.png",
-      "type": "image/png",
-      "sizes": "390x844",
-      "form_factor": "narrow"
     }
   ],
   "shortcuts": [
@@ -48,25 +22,13 @@
       "name": "Agendar",
       "short_name": "Agendar",
       "description": "Fazer um novo agendamento",
-      "url": "/?action=book",
-      "icons": [
-        {
-          "src": "/icon-192.png",
-          "sizes": "192x192"
-        }
-      ]
+      "url": "/?action=book"
     },
     {
       "name": "Admin",
       "short_name": "Admin",
       "description": "Acessar área administrativa",
-      "url": "/admin",
-      "icons": [
-        {
-          "src": "/icon-192.png",
-          "sizes": "192x192"
-        }
-      ]
+      "url": "/admin"
     }
   ]
 }
