feat: implementado sistema de versionamento automÃ¡tico
- Criado arquivo src/lib/version.js com sistema de versÃ£o
- Adicionado versÃ£o no footer (V 1.0.61)
- Criado scripts para incrementar versÃ£o automaticamente
- npm run version:patch - incrementa patch (commits)
- npm run version:deploy - incrementa minor (deploys)
- Logo jÃ¡ estava azul (gradiente azul)
- Sistema segue padrÃ£o: V MAJOR.MINOR.PATCH
- Build funcionando corretamente

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "version:patch": "node scripts/version.js",
+    "version:deploy": "node scripts/deploy-version.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
