fix: ajustado sistema de versionamento para padrÃ£o correto
- Removido padding de zeros (V 1.0.01 â†’ V 1.0.1)
- Major version agora vai para X.1.0 (nÃ£o X.0.0)
- Criado script npm run version:major
- Sistema segue padrÃ£o: V 1.0.1, V 1.0.2, ..., V 1.1.0, V 2.1.0
- Deploy volta para 0.0, Major volta para 0.0
- VersÃ£o atual: V 1.0.63
- Build funcionando corretamente

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "version:patch": "node scripts/version.js",
-    "version:deploy": "node scripts/deploy-version.js"
+    "version:deploy": "node scripts/deploy-version.js",
+    "version:major": "node scripts/major-version.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
