--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-day-picker": "^9.11.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.30.1",
+    "recharts": "^3.3.0",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
